...
  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }

    object Button {
      const val CLEAR_FILTERS = "Clear language button"
      const val SWITCH_VIEW = "Switch View Button"
    }

    object SearchBar {
      const val CLICKABLE_SEARCH_BAR = "Clickable Search Bar"
      const val SEARCH_BAR = "Search Bar focus status %s"
      const val LOADING_INDICATOR = "Search Bar Loading Indicator"
      const val CLOSE_SEARCH = "Search Bar Close Button"
    }

    object TopAppBar {
      const val NAVIGATE_UP = "Top App Bar Navigate Up Button"
      const val TOP_APP_BAR = "Top App Bar"
      const val TOP_APP_BAR_TITLE = "Top App Bar Title"
    }

    object ExpandableFab {
      const val BACKGROUND = "Floating Button Background"
...

    const val FILTER_BUTTON = "Filter Button"

    const val NAVIGATION_BAR = "App Navigation Bar"

    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

  const val VIEW_ALL = "View All Button"

  object Rating {
...
    const val SEASON_ROW = "Season Row %s"
  }

  object Modal {
    const val REQUEST_MOVIE = "Request Movie Modal"
    const val REQUEST_SEASONS = "Select Seasons Modal"
    const val ACTION_MENU = "Action Menu Modal"
    const val BOTTOM_SHEET = "Modal Bottom Sheet"

    const val DELETE_BUTTON = "Delete button for id %s"
  }

  object Request {
...
    const val PULL_TO_REFRESH = "List Pull To Refresh"
    const val DETAILS_SCREEN = "List Details Screen"

    const val CREATE_LIST_FAB = "Create List FAB"

    object Details {
      const val EMPTY_ITEM = "List Details Empty Item"
      const val PULL_TO_REFRESH = "List Details Pull To Refresh"
      const val EDIT_LIST_FAB = "Edit List FAB"

      const val SELECTED_CARD = "Media with name %s is selected %s"
    }

    object Create {
      const val SCREEN = "Create List Screen"
...
